@@ -1,5 +1,7 @@
 2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
 	* src/rcfile.c: Correct two comments, and tweak two others.
+	* src/color.c (color_update): Correct one comment, tweak some others,
+	remove two superfluous ones, and remove an unneeded 'if'.
 
 2014-04-08  David Lawrence Ramsey  <pooka109@gmail.com>
 	* src/nano.c (main): Convert the literal UTF-8 whitespace string into
